deploy/backing/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arcana
  labels:
    app.kubernetes.io/part-of: arcana
